<resources>
    <string name="app_name">Marchen</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_fullname">Not a valid full name</string>
    <string name="invalid_role">Choose your role</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_surname">Not a valid surname</string>
    <string name="invalid_teacher">Not a valid teacher ID</string>
    <string name="invalid_avatar">Please select avatar form a list</string>

    <string name="title_profile">Profile</string>
    <string name="title_children">Children</string>
    <string name="title_library">Fairytales</string>
    <string name="create_btn">Create new</string>
    <string name="string_name">Name</string>
    <string name="string_surname">Surname</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="add_child">Add child</string>
    <string name="project_name">Märchen</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="string_login_btn">Login</string>
    <string name="img_descript">Marchen logo for registration form</string>
    <string name="name_with_dots">Name:</string>
    <string name="string_reports">Reports</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="string_prev">Prev</string>
    <string name="next_btn">Next</string>
    <string name="image_for_fairytale_slide_description">Image for fairytale slide</string>
    <string name="string_parent">Parent</string>
    <string name="string_teacher">Teacher</string>
    <string name="string_register">Register</string>
    <string name="full_name">Full name</string>
    <string name="string_pole_doubledots">Role:</string>
    <string name="string_name_doubledot">Name:</string>
</resources>