<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background = "@drawable/login_background" >

    <data>
        <import type="android.view.View"/>
        <variable
            name="childFormViewModel"
            type="com.example.marchenandroid.ui.child_form.ChildFormViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".child_form.ChildFormFragment">

        <!--        <ScrollView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/nameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/field_example_layout"
                android:ems="10"
                android:hint="@string/string_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/surnameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/field_example_layout"
                android:ems="10"
                android:hint="@string/string_surname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameField"
                app:layout_constraintVertical_bias="0.023" />

            <EditText
                android:id="@+id/teacherIdField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/field_example_layout"
                android:ems="10"
                android:hint="Teacher Id"
                android:inputType="number"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surnameField" />

            <Button
                android:id="@+id/dobBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Set date of birth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teacherIdField" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/cancel_btn"
                app:layout_constraintBottom_toTopOf="@+id/avatars_grid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.728"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dobBtn"
                app:layout_constraintVertical_bias="0.796" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:enabled="false"
                android:text="@string/save_btn"
                app:layout_constraintBottom_toTopOf="@+id/avatars_grid"
                app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
                app:layout_constraintHorizontal_bias="0.598"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dobBtn"
                app:layout_constraintVertical_bias="0.796" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/avatars_grid"
                avatarsListData="@{childFormViewModel.avatars}"
                android:layout_width="382dp"
                android:layout_height="248dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"
                app:layout_constraintStart_toStartOf="parent"
                app:spanCount="3"
                tools:itemCount="16"
                tools:listitem="@layout/avatar_view_item" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="61dp"
                android:layout_height="59dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.352" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        </ScrollView>-->


    </FrameLayout>
</layout>